# image2tiff

./: .gitignore  CMakeLists.txt  README.md  build.sh
src/: CMakeLists.txt  cxxopts.hpp  leptonutil.cpp  leptonutil.h  main.cpp  types.h  version.h.in
test-deck/deck-001/: final-01.tiff
